[gd_scene load_steps=8 format=3 uid="uid://dsgsv6xueas2i"]

[ext_resource type="Script" path="res://Levels/room_4.gd" id="1_88584"]
[ext_resource type="PackedScene" uid="uid://b0fn3ogr4nvsx" path="res://Scenes/player.tscn" id="1_svivn"]
[ext_resource type="PackedScene" uid="uid://nneplcyswr75" path="res://Scenes/tile_map.tscn" id="2_6xswt"]
[ext_resource type="PackedScene" uid="uid://b81uevrd834tg" path="res://Scenes/inventory/items/Code3.tscn" id="3_awryu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5cmx4"]
size = Vector2(20, 191.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_23u10"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gh8g3"]
size = Vector2(27, 18)

[node name="room4" type="Node2D"]
script = ExtResource("1_88584")

[node name="Player" parent="." instance=ExtResource("1_svivn")]
position = Vector2(63, -7)

[node name="TileMap" parent="." instance=ExtResource("2_6xswt")]
layer_0/tile_data = PackedInt32Array(-196612, 1572864, 3, -131076, 1572864, 3, -65540, 1572864, 3, -4, 1572864, 3, 65532, 1572864, 3, 131068, 1572864, 3, 196604, 1572864, 3, 262140, 1572864, 3, 327676, 1572864, 3, -196611, 1572864, 3, -131075, 1572864, 3, -65539, 1572864, 3, -3, 1572864, 3, 65533, 1572864, 3, 131069, 1572864, 3, 196605, 1572864, 3, 262141, 1572864, 3, 327677, 1572864, 3, -196610, 1572864, 3, -131074, 1572864, 3, -65538, 1572864, 3, -2, 1572864, 3, 65534, 1572864, 3, 131070, 1572864, 3, 196606, 1572864, 3, 262142, 1572864, 3, 327678, 1572864, 3, -196609, 1572864, 3, -131073, 1572864, 3, -65537, 1572864, 3, -1, 1572864, 3, 65535, 1572864, 3, 131071, 1572864, 3, 196607, 1572864, 3, 262143, 1572864, 3, 327679, 1572864, 3, -262144, 1572864, 3, -196608, 1572864, 3, -131072, 1572864, 3, -65536, 1572864, 3, 0, 1572864, 3, 65536, 1572864, 3, 131072, 1572864, 3, 196608, 1572864, 3, 262144, 1572864, 3, -262143, 1572864, 3, -196607, 1572864, 3, -131071, 1572864, 3, -65535, 1572864, 3, 1, 1572864, 3, 65537, 1572864, 3, 131073, 1572864, 3, 196609, 1572864, 3, 262145, 1572864, 3, -262142, 1572864, 3, -196606, 1572864, 3, -131070, 1572864, 3, -65534, 1572864, 3, 2, 1572864, 3, 65538, 1572864, 3, 131074, 1572864, 3, 196610, 1572864, 3, 262146, 1572864, 3, -262141, 1572864, 3, -196605, 1572864, 3, -131069, 1572864, 3, -65533, 1572864, 3, 3, 1572864, 3, 65539, 1572864, 3, 131075, 1572864, 3, 196611, 1572864, 3, 262147, 1572864, 3, -262140, 1572864, 3, -196604, 1572864, 3, -131068, 1572864, 3, -65532, 1572864, 3, 4, 1572864, 3, 65540, 1572864, 3, 131076, 1572864, 3, 196612, 1572864, 3, 262148, 1572864, 3, -196613, 1572864, 3, -131077, 1572864, 3, -65541, 1572864, 3, -5, 1572864, 3, 65531, 1572864, 3, 131067, 1572864, 3, 196603, 1572864, 3, 262139, 1572864, 3, 327675, 1572864, 3, -262149, 1572864, 3, -262148, 1572864, 3, -262147, 1572864, 3, -262146, 1572864, 3, -262145, 1572864, 3, -327680, 1572864, 3, -327679, 1572864, 3, -327678, 1572864, 3, -327677, 1572864, 3, -327676, 1572864, 3, -327685, 1572864, 3, -327684, 1572864, 3, -327683, 1572864, 3, -327682, 1572864, 3, -327681, 1572864, 3, -393216, 1572864, 3, -393215, 1572864, 3, -393214, 1572864, 3, -393213, 1572864, 3, -393212, 1572864, 3, 393211, 1572864, 3, 393212, 1572864, 3, 393213, 1572864, 3, 393214, 1572864, 3, 393215, 1572864, 3, 327680, 1572864, 3, 327681, 1572864, 3, 327682, 1572864, 3, 327683, 1572864, 3, 327684, 1572864, 3, 327685, 1638400, 3, 262149, 1638400, 3, 196613, 1638400, 3, 131077, 1638400, 3, 65541, 1638400, 3, 5, 1638400, 3, -65531, 1638400, 3, -131067, 1638400, 3, -196603, 1638400, 3, -262139, 1638400, 3, -327675, 1638400, 3, -393211, 1638400, 3, -327686, 1507328, 3, -262150, 1507328, 3, -196614, 1507328, 3, -131078, 1507328, 3, -65542, 1507328, 3, -6, 1507328, 3, 65530, 1507328, 3, 131066, 1507328, 3, 196602, 1507328, 3, 262138, 1507328, 3, 327674, 1507328, 3, 393210, 1507328, 3)
layer_1/tile_data = PackedInt32Array(-327681, 655360, 17, -393215, 655360, 17, -393216, 655360, 17, -393219, 1310720, 15, -327683, 1310720, 16, -327686, 786432, 13, -262150, 786432, 14, -196614, 786432, 14, -327685, 655360, 17, -327684, 655360, 17, -393214, 655360, 17, -393213, 655360, 17, -393212, 655360, 17, -393211, 851968, 13, -327675, 851968, 14, -262139, 851968, 14, -196603, 851968, 15, -131078, 786432, 15, 65530, 1638400, 9, -6, 1638400, 8, -131072, 65536, 3, -131073, 0, 10, -196608, 65536, 10, -196607, 131072, 10, -262144, 0, 7, 262138, 1638400, 11, 327674, 1638400, 12, 6, 1769473, 131072, 5, 1769473, 131073, -65530, 1441793, 131072, -65531, 1441793, 131073, -327682, 1310720, 16, -393218, 1310720, 15)

[node name="Walls" type="Node2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/StaticBody2D"]
position = Vector2(105, -0.5)
shape = SubResource("RectangleShape2D_5cmx4")

[node name="StaticBody2D2" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/StaticBody2D2"]
position = Vector2(-106, 0)
shape = SubResource("RectangleShape2D_5cmx4")

[node name="StaticBody2D3" type="StaticBody2D" parent="Walls"]
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/StaticBody2D3"]
position = Vector2(-105, -0.999619)
shape = SubResource("RectangleShape2D_5cmx4")

[node name="StaticBody2D4" type="StaticBody2D" parent="Walls"]
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/StaticBody2D4"]
position = Vector2(106, 0.999992)
shape = SubResource("RectangleShape2D_5cmx4")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(93, 0)
shape = SubResource("RectangleShape2D_23u10")

[node name="Items" type="Node2D" parent="."]

[node name="Code3" parent="Items" instance=ExtResource("3_awryu")]
position = Vector2(-63, -40)
scale = Vector2(0.2, 0.2)

[node name="Secret_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Secret_area"]
position = Vector2(-33.5, -89)
shape = SubResource("RectangleShape2D_gh8g3")

[node name="secret_area_spawn" type="Marker2D" parent="."]
position = Vector2(-40, -75)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Secret_area" to="." method="_on_secret_area_body_entered"]
